@@ -17477,6 +17477,15 @@ function extend_response(PROTO) {
 		return res.$text();
 	};
 
+	PROTO.jsonstring = function(str) {
+		var res = this;
+		F.stats.response.json++;
+		res.options.body = str;
+		res.options.compress = res.options.body.length > 4096;
+		res.options.type = CT_JSON;
+		return res.$text();
+	};
+
 	const SECURITYTXT = { '/security.txt': 1, '/.well-known/security.txt': 1 };
 
 	PROTO.continue = function(callback) {
